--- a/PCBcss.css
+++ b/PCBcss.css
@@ -10,6 +10,8 @@ header {
     font-size: 350%;
     font-weight: bolder;
     padding-bottom: 20px;
+    padding-left: 30px;
+    padding-top: 30px;
 
 }
 
@@ -42,7 +44,7 @@ a:hover {
 }
 
 a:visited {
-    color: #292f36;
+    color: white;
 }
 
 #paigeface img {
@@ -101,4 +103,12 @@ span {
 
 #transcriptlink {
     opacity: 0%;
+}
+
+#cruiser img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    padding: 40px;
 }
